    Linux-only.
  * Replace non-breaking spaces with regular spaces in udeb's long
    description.
  * Switch to dh:
    - Bump debhelper build-dep, add dh-autoreconf build-dep.
    - Bump compat to 8.
    - Rewrite debian/rules.
    - Pass --fail-missing to dh_install.
    - Stop passing --disable-static to configure, that's the default.

 -- Cyril Brulebois <kibi@debian.org>  Wed, 02 Feb 2011 05:44:06 +0100

xserver-xorg-input-evdev (1:2.6.0-1) experimental; urgency=low

  * New upstream release.

 -- Cyril Brulebois <kibi@debian.org>  Tue, 11 Jan 2011 15:40:01 +0100

xserver-xorg-input-evdev (1:2.5.99.903-1) experimental; urgency=low

  * New upstream release candidate.

 -- Cyril Brulebois <kibi@debian.org>  Wed, 05 Jan 2011 01:33:36 +0100

xserver-xorg-input-evdev (1:2.5.99.901-2) experimental; urgency=low

  * Switch Architecture for all binary packages from any to linux-any
    since this driver is Linux-only.
  * Cherry-pick bed25600 from upstream to fix crashes in
    GetProximityEvents (Closes: #605374).

 -- Cyril Brulebois <kibi@debian.org>  Tue, 04 Jan 2011 16:06:52 +0100

xserver-xorg-input-evdev (1:2.5.99.901-1) experimental; urgency=low

  * New upstream release.

 -- Cyril Brulebois <kibi@debian.org>  Mon, 22 Nov 2010 15:50:51 +0100

xserver-xorg-input-evdev (1:2.5.0-1) experimental; urgency=low

  [ Robert Hooker ]
  * New upstream release.
  * Bump xutils-dev build dep for new util-macros.

  [ Cyril Brulebois ]
  * New upstream release fixes some bugs:
     - Forward keycodes > 255 (Closes: #500096).
     - No longer list README.mouse (Closes: #590529).

 -- Cyril Brulebois <kibi@debian.org>  Thu, 21 Oct 2010 19:49:10 +0200

xserver-xorg-input-evdev (1:2.3.2-7) experimental; urgency=low

  * Build against Xserver 1.9.1 rc1.

 -- Cyril Brulebois <kibi@debian.org>  Tue, 12 Oct 2010 23:52:24 +0200

xserver-xorg-input-evdev (1:2.3.2-6) unstable; urgency=low

  [ Julien Cristau ]
  * Drop 05-evdev.conf, this moved to the server.