@@ -1,7 +1,5 @@
 #!/usr/bin/make -f
 
-include debian/xsfbs/xsfbs.mk
-
 # Kill *.la files, and forget no-one:
 override_dh_install:
 	find debian/tmp -name '*.la' -delete
@@ -11,9 +9,5 @@ override_dh_install:
 override_dh_shlibdeps:
 	dh_shlibdeps -- --warnings=6
 
-# Depend on serverabi to get substvars:
-override_dh_gencontrol: serverabi
-	dh_gencontrol
-
 %:
-	dh $@ --with autoreconf,quilt --builddirectory=build/
+	dh $@ --with autoreconf,quilt,xsf --builddirectory=build/
