@@ -10,6 +10,7 @@ xserver-xorg-input-evdev (1:2.6.0-2) UNRELEASED; urgency=low
     - Rewrite debian/rules.
     - Pass --fail-missing to dh_install.
     - Stop passing --disable-static to configure, that's the default.
+  * Bump xserver-xorg-dev build-dep for dh_xsf_substvars and xsf sequence.
 
  -- Cyril Brulebois <kibi@debian.org>  Wed, 02 Feb 2011 05:44:06 +0100
 
